force-app/main/default/objects/Lead/fields/Celular_Preenchido__c.field-meta.xml
<CustomField>
    <fullName>Celular_Preenchido__c</fullName>
    <description>Verifica se o celular está em branco</description>
    <formula>MobilePhone != null</formula>
    <inlineHelpText>Marque caso o nao tenha calular</inlineHelpText>
    <label>Celular Preenchido ?</label>
    <type>Checkbox</type>
</CustomField>