force-app/main/default/objects/Lead/fields/isTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>isTerraqueo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar sempre que o usuário pertence ao planeta terra.</description>
    <inlineHelpText>Marcar sempre que o usuário pertence ao planeta terra.</inlineHelpText>
    <label>É terráqueo ?</label>
    <type>Checkbox</type>
</CustomField>