force-app/main/default/objects/Lead/fields/NomeDeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeDeGuerra__c</fullName>
    <description>Nome de guerra adotado pelo herói</description>
    <externalId>true</externalId>
    <inlineHelpText>Nome de guerra adotado pelo herói</inlineHelpText>
    <label>Nome de Guerra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>