force-app/main/default/objects/Lead/fields/Planeta__c.field-meta.xml
<CustomField>
    <fullName>Planeta__c</fullName>
    <description>Esse campo deve ser preenchido sempre que a opção &quot;É Terráqueo?&quot; estiver desmarcada.</description>
    <inlineHelpText>Esse campo deve ser preenchido sempre que a opção &quot;É Terráqueo?&quot; estiver desmarcada.</inlineHelpText>
    <label>Planeta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>