force-app/main/default/objects/Lead/validationRules/ObrigaCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaCelular</fullName>
    <active>false</active>
    <description>Não permite o campo celular em branco</description>
    <errorConditionFormula>MobilePhone = null</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>É obrigatório o preenchimento do celular</errorMessage>
</ValidationRule>